Fix styling at HTML level to prevent web page from shifting due to scrollbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,8 @@
  */
 
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
-html, body {
+html {
+  overflow-y: scroll;
   background-color: #fafafa;
 }
 
